# PIDQuantify

./: CMakeLists.txt  PIDQuantify-config.in  README.md  README.txt
figures/ROC_comparison/: ROC_comparison.cc
figures/perf_comparison/: perf_comparison.cc
figures/perf_figures/: perf_figures.cc
include/: 301_cut.hh  601_path.hh  QH2.hh  QH2Perf.hh  QHistogram.hh  QPerf.hh  QPerfCollection.hh  QPerfCombo.hh  QProperty.hh  QROCCollection.hh  QROCCurve.hh
src/: 101_performance.cc  102_ROC.cc  601_path.cc  QH2.cc  QH2Perf.cc  QHistogram.cc  QPerf.cc  QPerfCollection.cc  QPerfCombo.cc  QProperty.cc  QROCCollection.cc  QROCCurve.cc
